[package]
name = "windy-macros"
version = "0.1.1"
authors = ["takubokudori <takubokudori@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/takubokudori/windy-macros"
repository = "https://github.com/takubokudori/windy-macros"
keywords = ["windy", "windows", "ansi", "unicode", "multibyte"]
description = "Macros to convert a UTF-8 string to WString or AString at compile time"
readme = "README.md"
edition = "2024"

exclude = [
    ".gitignore",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
windy = "0.3.0"
